example/azure/lb-demo.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: testapp-service
  namespace: default
spec:
  selector:
    app: testapp
  ports:
    - port: 80 # Default port for image
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: testapp-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: testapp
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - name: testapp
        image: nginx:1.7.9
        ports:
        - containerPort: 80
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testapp-ingress
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: testapp.aocs-int.t-systems-service.com
    http:
      paths:
      - path: /
        backend:
          serviceName: testapp-service
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: lb-to-ingress
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
#  loadBalancerIP: 10.240.0.25
  ports:
  - port: 80
  selector:
    app: testapp-ingress
